feat: filter APIs fetch to get only V2 & V4
APIM-8542